Run update.sh over the po files; this should probably get done before a release gets tagged, otherwise if translators patch the .po in the tarball then it makes it a bugger to merge into CVS.

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.10.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-28 17:24+0200\n"
+"POT-Creation-Date: 2004-04-25 15:37+0100\n"
 "PO-Revision-Date: 2004-03-28 18:27+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
@@ -279,12 +279,15 @@ msgstr "camp de detalls del fitxer «%s» no permès en el fitxer d'estat"
 #: lib/fields.c:104
 #, c-format
 msgid "too many values in file details field `%s' (compared to others)"
-msgstr "massa valors en el camp de detalls del fitxer «%s» (comparat amb d'altres)"
+msgstr ""
+"massa valors en el camp de detalls del fitxer «%s» (comparat amb d'altres)"
 
 #: lib/fields.c:117
 #, c-format
 msgid "too few values in file details field `%s' (compared to others)"
-msgstr "nom de valors insuficient en el camp dels detalls de fitxer «%s» (comparat amb d'altres)"
+msgstr ""
+"nom de valors insuficient en el camp dels detalls de fitxer «%s» (comparat "
+"amb d'altres)"
 
 #: lib/fields.c:133
 msgid "yes/no in boolean field"
@@ -336,7 +339,9 @@ msgstr "s'ha indicat com conffile el directori arrel o un directori nul"
 #, c-format
 msgid ""
 "`%s' field, missing package name, or garbage where package name expected"
-msgstr "En el camp «%s», falta un nom de paquet, o s'ha trobat brutícia on s'esperava un nom de paquet"
+msgstr ""
+"En el camp «%s», falta un nom de paquet, o s'ha trobat brutícia on "
+"s'esperava un nom de paquet"
 
 #: lib/fields.c:308
 #, c-format
@@ -381,7 +386,8 @@ msgid ""
 " version value starts with non-alphanumeric, suggest adding a space"
 msgstr ""
 "camp «%s», referència a «%.255s»:\n"
-" el valor de versió comença amb un caràcter no alfanumèric, es suggereix afegir un espai"
+" el valor de versió comença amb un caràcter no alfanumèric, es suggereix "
+"afegir un espai"
 
 #: lib/fields.c:381
 #, c-format
@@ -406,7 +412,8 @@ msgstr "camp «%s», referència a «%.255s»: error en la versió: %.255s"
 #: lib/fields.c:406
 #, c-format
 msgid "`%s' field, syntax error after reference to package `%.255s'"
-msgstr "camp «%s», error de sintaxi després de la referència al paquet «%.255s»"
+msgstr ""
+"camp «%s», error de sintaxi després de la referència al paquet «%.255s»"
 
 #: lib/fields.c:413
 #, c-format
@@ -3729,7 +3736,9 @@ msgstr "dpkg-deb: «%.255s» no conté cap component de control  «%.255s»\n"
 #: dpkg-deb/info.c:101
 #, c-format
 msgid "open component `%.255s' (in %.255s) failed in an unexpected way"
-msgstr "l'obertura del component «%.255s» (dins de %.255s) ha fallat de forma inesperada"
+msgstr ""
+"l'obertura del component «%.255s» (dins de %.255s) ha fallat de forma "
+"inesperada"
 
 #: dpkg-deb/info.c:106
 msgid "One requested control component is missing"
@@ -3855,12 +3864,15 @@ msgstr ""
 "  -b|--build <directori> [<deb>]    construeix un arxiu.\n"
 "  -c|--contents <deb>               llista els continguts.\n"
 "  -I|--info <deb> [<fitxerc>...]    mostra la info en l'eixida estàndard.\n"
-"  -W|--show <deb>                   mostra informació sobre el(s) paquet(s).\n"
-"  -f|--field <deb> [<campc>...]     mostra el(s) camp(s) en l'eixida estàndard.\n"
+"  -W|--show <deb>                   mostra informació sobre el(s) paquet"
+"(s).\n"
+"  -f|--field <deb> [<campc>...]     mostra el(s) camp(s) en l'eixida "
+"estàndard.\n"
 "  -e|--control <deb> [<directori>]  extrau la informació de control.\n"
 "  -x|--extract <deb> <directori>    estrau els fitxers.\n"
 "  -X|--vextract <deb> <directori>   extrau i llista els fitxers.\n"
-"  --fsys-tarfile <deb>              mostra el fitxer tar del sistema de fitxers.\n"
+"  --fsys-tarfile <deb>              mostra el fitxer tar del sistema de "
+"fitxers.\n"
 "  -h|--help                         mostra aquest missatge.\n"
 "  --version | --licence             mostra la versió i llicència.\n"
 "\n"
@@ -3879,7 +3891,8 @@ msgstr ""
 "Sintaxi del format:\n"
 "  Un format és una cadena que es mostrarà per a cada paquet. El format\n"
 "  pot incloure les seqüències d'escape estàndard \\n (nova línia),\n"
-"  \\r (retorn de carro) o \\\\ (barra invertida). Es pot incloure informació\n"
+"  \\r (retorn de carro) o \\\\ (barra invertida). Es pot incloure "
+"informació\n"
 "  sobre el paquet inserint referències variables als camps dels paquets\n"
 "  utilitzant la sintaxi ${var[;amplada]}. Els camps s'aliniaran a la\n"
 "  dreta a menys que l'amplada siga negativa, en aquest cas s'utilitzarà\n"
@@ -3929,7 +3942,9 @@ msgstr "el fitxer «%.250s» està corromput - hi ha nuls en la secció d'info."
 #: split/info.c:116
 #, c-format
 msgid "file `%.250s' is format version `%.250s' - you need a newer dpkg-split"
-msgstr "el fitxer «%.250s» té un format versió «%.250s» - necessiteu un dpkg-split més nou"
+msgstr ""
+"el fitxer «%.250s» té un format versió «%.250s» - necessiteu un dpkg-split "
+"més nou"
 
 #: split/info.c:124
 #, c-format
@@ -3939,7 +3954,9 @@ msgstr "el fitxer «%.250s» està corromput - suma MD5 «%.250s» errònia"
 #: split/info.c:131
 #, c-format
 msgid "file `%.250s' is corrupt - no slash between part numbers"
-msgstr "el fitxer «%.250s» està corromput - no hi ha una barra entre els números de part"
+msgstr ""
+"el fitxer «%.250s» està corromput - no hi ha una barra entre els números de "
+"part"
 
 #: split/info.c:140
 #, c-format
@@ -3949,22 +3966,30 @@ msgstr "el fitxer «%.250s» està corromput - número de part erroni"
 #: split/info.c:145
 #, c-format
 msgid "file `%.250s' is corrupt - bad magic at end of second header"
-msgstr "el fitxer «%.250s» està corromput - màgia errònia al final de la segona capçalera"
+msgstr ""
+"el fitxer «%.250s» està corromput - màgia errònia al final de la segona "
+"capçalera"
 
 #: split/info.c:147
 #, c-format
 msgid "file `%.250s' is corrupt - second member is not data member"
-msgstr "el fitxer «%.250s» està corromput - el segon element no és un element de dades"
+msgstr ""
+"el fitxer «%.250s» està corromput - el segon element no és un element de "
+"dades"
 
 #: split/info.c:153
 #, c-format
 msgid "file `%.250s' is corrupt - wrong number of parts for quoted sizes"
-msgstr "el fitxer «%.250s» està corromput - número equivocat de parts per a les mides indicades"
+msgstr ""
+"el fitxer «%.250s» està corromput - número equivocat de parts per a les "
+"mides indicades"
 
 #: split/info.c:157
 #, c-format
 msgid "file `%.250s' is corrupt - size is wrong for quoted part number"
-msgstr "el fitxer «%.250s» està corromput - la mida està equivocada pel número de part indicada"
+msgstr ""
+"el fitxer «%.250s» està corromput - la mida està equivocada pel número de "
+"part indicada"
 
 #: split/info.c:163
 #, c-format
@@ -4984,7 +5009,9 @@ msgstr "s'ha produït un error d'escriptura en l'eixida d'error estàndard"
 
 #: dselect/method.cc:204
 msgid "error reading acknowledgement of program failure message"
-msgstr "s'ha produït un error en llegir el reconeixement del missatge de la falla del programa"
+msgstr ""
+"s'ha produït un error en llegir el reconeixement del missatge de la falla "
+"del programa"
 
 #: dselect/method.cc:235
 msgid "update available list script"
@@ -5429,10 +5456,14 @@ msgid ""
 "You can use `o' and `O' to change the sort order and give yourself the "
 "opportunity to mark packages in different kinds of groups."
 msgstr ""
-"La línia que heu resaltat representa molts paquets, si demaneu que s'instal·lin, desinstal·lin, mantinguin, etc. això afectarà a tots els paquets que cumpleixin el criteri indicat.\n"
+"La línia que heu resaltat representa molts paquets, si demaneu que "
+"s'instal·lin, desinstal·lin, mantinguin, etc. això afectarà a tots els "
+"paquets que cumpleixin el criteri indicat.\n"
 "\n"
-"Si desplaceu l'indicatiu de resaltat a la línia d'un paquet determinat se us mostrarà informació refrent a aquest paquet.\n"
-"Podeu usar «o» i «O» per a canviar l'ordre dels paquets llistats permetent-vos marcar els paquets per diferents classes o grups."
+"Si desplaceu l'indicatiu de resaltat a la línia d'un paquet determinat se us "
+"mostrarà informació refrent a aquest paquet.\n"
+"Podeu usar «o» i «O» per a canviar l'ordre dels paquets llistats permetent-"
+"vos marcar els paquets per diferents classes o grups."
 
 #: dselect/pkginfo.cc:96
 msgid "interrelationships affecting "
@@ -5607,10 +5638,12 @@ msgstr ""
 "  n, Avall, j          p, Amunt, k           mou el resaltat\n"
 "  N, Pàg. avall, Espai P, Pàg. amunt, Tornar desplaça la llista 1 pàgina\n"
 "  ^n                   ^p                    desplaça la llista 1 línia\n"
-"  t, Inici             e, Fí                 salta a l'inici/fí de la llista\n"
+"  t, Inici             e, Fí                 salta a l'inici/fí de la "
+"llista\n"
 "  u                    d                     desplaça la info. 1 pàgina\n"
 "  ^u                   ^d                    desplaça la info. 1 línia\n"
-"  B, Esquerra          F, Dreta              desplaça la visual. 1/3 pantalla\n"
+"  B, Esquerra          F, Dreta              desplaça la visual. 1/3 "
+"pantalla\n"
 "  ^b                   ^f                    desplaça la visual. 1 caràcter\n"
 "Marca els paquets a processar:\n"
 " +, Insert   instal·la o actualitza\n"
@@ -5620,12 +5653,18 @@ msgstr ""
 " _           Purga (desinstal·la i elimina la configuració)\n"
 "                                     Miscel·lània:\n"
 "Treu, surt, sobreescriu (nota majúscules!): ?, F1 demana ajuda\n"
-" Enter  Confirma, treu (verificar dependències) i, I  mostra els tipus d'info.\n"
-"   Q    Confirma, treu (no verifica dependènc.) o, O  circula opcions d'ordre\n"
-" X, Esc sortir (eXit), abandona qualsevol canvi v, V  canvia la visió d'estat\n"
-"   R    Reverteix l'estat abans d'aquesta llista ^l   refresca la visualització\n"
-"   U    deixa-ho en l'estat suggerit              /   cerca (Enter cancelarà)\n"
-"   D    deixa-ho tot en l'estat requerit          \\   repeteix l'última cerca\n"
+" Enter  Confirma, treu (verificar dependències) i, I  mostra els tipus "
+"d'info.\n"
+"   Q    Confirma, treu (no verifica dependènc.) o, O  circula opcions "
+"d'ordre\n"
+" X, Esc sortir (eXit), abandona qualsevol canvi v, V  canvia la visió "
+"d'estat\n"
+"   R    Reverteix l'estat abans d'aquesta llista ^l   refresca la "
+"visualització\n"
+"   U    deixa-ho en l'estat suggerit              /   cerca (Enter "
+"cancelarà)\n"
+"   D    deixa-ho tot en l'estat requerit          \\   repeteix l'última "
+"cerca\n"
 
 #: dselect/helpmsgs.cc:33
 msgid "Introduction to package selections"
@@ -5680,7 +5719,8 @@ msgstr ""
 "qualsevol moment per a obtindre ajuda.\n"
 "\n"
 "Quan hagueu acavat de seleccionar paquets, orémeu <enter> per a confirmar\n"
-"els canvis, o «Q» per a sortir sense desar els canvis. Llavors es realitzarà\n"
+"els canvis, o «Q» per a sortir sense desar els canvis. Llavors es "
+"realitzarà\n"
 "una última verificació dels conflictes i dependències - aquí també podrieu\n"
 "veure una subllista.\n"
 "\n"
@@ -5830,22 +5870,29 @@ msgid ""
 "description.\n"
 msgstr ""
 "La meitat superior de la pantalla mostra una llista de paquets. Per a cada\n"
-"paquet veureu quatre columnes amb la marca i el seu estat actual en el sistema.\n"
+"paquet veureu quatre columnes amb la marca i el seu estat actual en el "
+"sistema.\n"
 "De manera concisa, (useu «v» per a canviar el mode de veure) aquests són\n"
 "caràcters individuals, d'esquerra a dereta:\n"
-" Indica error: Espai - cap error (però el paquet pot estar en estat de trencat\n"
+" Indica error: Espai - cap error (però el paquet pot estar en estat de "
+"trencat\n"
 "                     - mireu més endavant)\n"
-"                «R»  - error seri durant la instal·lació, cal reinstal·lar-lo;\n"
+"                «R»  - error seri durant la instal·lació, cal reinstal·lar-"
+"lo;\n"
 " Estat d'instal·lació:   Espai - no instal·lat;\n"
 "                          «*»  - instal·lat;\n"
-"                          «-»  - no instal·lat, però queden fitxers de config.;\n"
-"         els paquets en { «U»  - desempaquetat però encara sense configurar;\n"
+"                          «-»  - no instal·lat, però queden fitxers de "
+"config.;\n"
+"         els paquets en { «U»  - desempaquetat però encara sense "
+"configurar;\n"
 "         aquests estats { «C»  - semi-configurat (s'ha produït un error);\n"
 "         estan trencats { «I»  - semi-instal·lat (s'ha produïtun error).\n"
-" Marca antiga: el requerit per aquest paquet abans de presentar aquesta llista;\n"
+" Marca antiga: el requerit per aquest paquet abans de presentar aquesta "
+"llista;\n"
 " Marca: el que és requerit per aquest paquet;\n"
 "   «*»: marcat per a instal·lació o actualització;\n"
-"   «-»: marcat per a desinstal·lació, però deixant els fitxers de configuració\n"
+"   «-»: marcat per a desinstal·lació, però deixant els fitxers de "
+"configuració\n"
 "   «=»: mantindre: el paquet no serà processat de cap manera;\n"
 "   `_»: marcat per a purgar-lo completament - també la configuració\n"
 "   «n»: el paquet és nou i encara s'ha de marcar instal./desinstal./etc.\n"
@@ -5943,9 +5990,11 @@ msgstr ""
 "Aquesta llista us permetrà seleccionar un d'aquests mètodes d'instal·lació.\n"
 "\n"
 "Desplaceu el resaltat lluminós al mètode que desitgeu usar i premeu <Intro>\n"
-"Llavors se us preguntarà per la informació necessària per a la instal·lació.\n"
+"Llavors se us preguntarà per la informació necessària per a la "
+"instal·lació.\n"
 "\n"
-"Mentre desplaceu l'indicatiu resaltat se us mostrarà, quan estigui disponible,\n"
+"Mentre desplaceu l'indicatiu resaltat se us mostrarà, quan estigui "
+"disponible,\n"
 "una descripció de cada mètode en la meitat inferior de la pantalla.\n"
 "\n"
 "Si desitgeu sortir sense canviar res useu la tecla «x» mentre estigueu\n"
@@ -5982,19 +6031,23 @@ msgid ""
 "  /                search (just return to cancel)\n"
 "  \\                repeat last search\n"
 msgstr ""
-"Tecles de moviment: Re Pàg/Av Pàg, Inici/Fí, Adalt/Avall, Endavant/Endarrera\n"
+"Tecles de moviment: Re Pàg/Av Pàg, Inici/Fí, Adalt/Avall, Endavant/"
+"Endarrera\n"
 "  n, Fletxa-avall     p, Fletxa-amunt      mou l'indicador resaltat\n"
 "  N, Re Pàg, Espai    P, Av Pàg, Retroces  desplaça la llista en 1 pàgina\n"
 "  ^n                  ^p                   desplaça la llista en 1 línia\n"
 "  t, Inici            b, Fí                salta a l'inici/fí de la llista\n"
 "  u                   d                    desplaça la info. en 1 pàgina\n"
 "  ^u                  ^d                   desplaça la info. en 1 línia\n"
-"  B, Fletxa-esquerra  F, Fletxa-dreta      desplaça la mostra 1/3 de la pantalla\n"
+"  B, Fletxa-esquerra  F, Fletxa-dreta      desplaça la mostra 1/3 de la "
+"pantalla\n"
 "  ^b                  ^f                   desplaça la mostra 1 caràcter\n"
-"(Aquestes són les mateixes tecles de moviment que en la llista mostrada del paquet.)\n"
+"(Aquestes són les mateixes tecles de moviment que en la llista mostrada del "
+"paquet.)\n"
 "\n"
 "Treure:\n"
-" Return, Intro   selecciona aquest mètode i anar al seu diàleg de configuració\n"
+" Return, Intro   selecciona aquest mètode i anar al seu diàleg de "
+"configuració\n"
 " x, X            surt sense alterar o establir el mètode d'instal·lació\n"
 "\n"
 "Miscelània:\n"
