Large batch of translation updates.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,20 @@ dpkg (1.10.21) unstable; urgency=low
     shared or diverted conffile to be deleted by dpkg.
     Closes: #10879, #33046, #47267, #90623, #98210, #109691, #146167.
     Closes: #155456, #204275.
-  * Update Catalan translation (Jordi Mallach).
+  * Updated Translations:
+    - Brazilian Portugese (Andre Luis Lopes).  Closes: #237864.
+    - Catalan (Jordi Mallach).
+    - Danish (Claus Hindsgaul).  Closes: #237624.
+    - Dutch (Pieter-Paul Spiertz, Bart Cornelis, Erwin).
+      Closes: #102094, #151799, #207758.
+    - French (Sam Hocevar).  Closes: #243191.
+    - German (Florian Ernst).  Closes: #109669, #115352, #187952, #244098.
+    - Polish (Bartosz Fenski).  Closes: #242870.
+    - Spanish (Javier Fernández-Sanguino Peña).  Closes: #166052.
+    - Swedish (Peter Karlsson).
+  * New Translations:
+    - Norwegian Nynorsk (Gaute Hvoslef Kvalnes).  Closes: #233614.
+    - Portguese (Miguel Figueiredo).  Closes: #240081.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
