--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian dpkg 1.9.16\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-25 15:37+0100\n"
+"POT-Creation-Date: 2004-04-19 14:10+0100\n"
 "PO-Revision-Date: 2002-05-27 18:54:02+0200\n"
 "Last-Translator: Michael Piefel <piefel@debian.org>\n"
 "Language-Team: German <de@li.org>\n"
@@ -508,9 +508,9 @@ msgid "unable to set close-on-exec flag for %.250s"
 msgstr "kann »close-on-exec«-Flag für »%.250s« nicht setzen"
 
 #: lib/mlib.c:199
-#, fuzzy, c-format
+#, c-format
 msgid "failed in buffer_write(fd) (%i, ret=%li): %s"
-msgstr "fehlgeschlagen in buffer_write(fd) (%i, ret=%zi %s): %s"
+msgstr "fehlgeschlagen in buffer_write(fd) (%i, ret=%li): %s"
 
 #: lib/mlib.c:206
 #, c-format
@@ -553,9 +553,9 @@ msgid "failed in buffer_copy (%s)"
 msgstr "fehlgeschlagen in buffer_copy (%s)"
 
 #: lib/mlib.c:338
-#, fuzzy, c-format
+#, c-format
 msgid "short read in buffer_copy (%s)"
-msgstr "fehlgeschlagen in buffer_copy (%s)"
+msgstr "short read in buffer_copy (%s)"
 
 #: lib/myopt.c:40
 #, c-format
@@ -589,7 +589,7 @@ msgstr "Fehler beim Schließen der Konfigurationsdatei »%.255s«"
 
 #: lib/myopt.c:93 lib/myopt.c:101
 msgid "Error allocating memory for cfgfilename"
-msgstr ""
+msgstr "Fehler beim Zuweisen von Speicher für cfgfilename"
 
 #: lib/myopt.c:129
 #, c-format
@@ -1335,9 +1335,9 @@ msgid "unable to set mode of new dist conffile `%.250s'"
 msgstr "kann Modus des neu verteilten Conffiles »%.250s« nicht setzen"
 
 #: main/configure.c:460
-#, fuzzy, c-format
+#, c-format
 msgid "failed to run %s (%.250s)"
-msgstr "konnte diff nicht starten (%.250s)"
+msgstr "konnte %s nicht starten (%.250s)"
 
 #: main/configure.c:469 main/configure.c:507
 msgid "wait for shell failed"
@@ -1995,7 +1995,6 @@ msgid "not installed but configs remain"
 msgstr "nicht installiert aber Konfigurationsdateien bleiben"
 
 #: main/help.c:87
-#, fuzzy
 msgid "dpkg - error: PATH is not set.\n"
 msgstr "dpkg - Warnung: PATH ist nicht gesetzt.\n"
 
@@ -2121,7 +2120,7 @@ msgid " --licence for copyright and license details.\n"
 msgstr "--licence für Details zum Copyright und der Lizenz.\n"
 
 #: main/main.c:58
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: \n"
 "  dpkg -i|--install      <.deb file name> ... | -R|--recursive <dir> ...\n"
@@ -2199,7 +2198,7 @@ msgstr ""
 "Standardausg.\n"
 "  dpkg --set-selections                   Setze Paketauswahl von "
 "Standardeing.\n"
-"  dpkg --update-avail <Packages-Datei>    Ersetze Liste der verfügbare "
+"  dpkg --update-avail <Packages-Datei>    Ersetze Liste der verfügbaren "
 "Pakete\n"
 "  dpkg --merge-avail <Packages-Datei>     Führe Listen zusammen\n"
 "  dpkg --clear-avail                      Lösche Verfügbarkeits-"
@@ -3752,7 +3751,6 @@ msgstr ""
 "Rufen Sie dpkg-deb --licence für Details auf.\n"
 
 #: dpkg-deb/main.c:58
-#, fuzzy
 msgid ""
 "Command:\n"
 "  -b|--build <directory> [<deb>]    build an archive.\n"
@@ -4257,9 +4255,9 @@ msgstr "mdfile"
 #. * non-text file.
 #.
 #: utils/md5sum.c:250
-#, fuzzy, c-format
+#, c-format
 msgid "%s: unrecognized line\n"
-msgstr "%s: Zeile nicht erkannt: %s"
+msgstr "%s: Zeile nicht erkannt\n"
 
 #: utils/md5sum.c:284
 #, c-format
