--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 25 16:59:09 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+ * configure.in: Add Norwegian Nynorsk and Portugese linguas.
+
 Sun Mar 28 18:32:19 CEST 2004 Jordi Mallach <jordi@debian.org>
 
   * po/ca.po: Update Catalan translation.
