Updated Japanese manual pages, added new dpkg-source.1 page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,10 +13,12 @@ dpkg (1.10.21) unstable; urgency=low
       Closes: #102094, #151799, #207758.
     - French (Sam Hocevar).  Closes: #243191.
     - German (Florian Ernst).  Closes: #109669, #115352, #187952, #244098.
+    - Japanese manpages (KISE Hiroshi).  Closes: #220776.
     - Polish (Bartosz Fenski).  Closes: #242870.
     - Spanish (Javier Fernández-Sanguino Peña).  Closes: #166052.
     - Swedish (Peter Karlsson).
   * New Translations:
+    - Japanese dpkg-source manpage (KISE Hiroshi).  Closes: #239000.
     - Norwegian Nynorsk (Gaute Hvoslef Kvalnes).  Closes: #233614.
     - Portguese (Miguel Figueiredo).  Closes: #240081.
 
