--- a/man/ja/deb.5
+++ b/man/ja/deb.5
@@ -1,6 +1,4 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\" Authors: Raul Miller, Ian Jackson
-.\"original revision: 1.6
+.\"original revision: 1.1
 .\"WORD     package control information   パッケージ制御情報
 .\"WORD	    gzipped ustar                 圧縮 tar 形式
 .TH DEB 5 "January 2000" "Debian Project" "Debian"
@@ -27,7 +25,7 @@ deb \- Debian バイナリパッケージ形式
 アーカイブである。
 .PP
 .B .deb
-に含まれる第1のメンバーは
+に含まれる第 1 のメンバーは
 .B debian-binary
 というファイル名で、改行で区切られた数行から成る。
 現在は一行だけであり、deb 形式バージョン番号が与えられる。
@@ -43,7 +41,7 @@ deb \- Debian バイナリパッケージ形式
 (アーカイブの最後に含まれる場合を除く)、プログラムは安全に実行を
 継続できる。これについては、以下で説明する。
 .PP
-2番目に要請されるメンバーは
+2 番目に要請されるメンバーは
 .B control.tar.gz
 というファイル名を持つ圧縮 tar 形式である。これは、
 パッケージ制御情報をテキストファイル群として含む。
@@ -56,7 +54,7 @@ deb \- Debian バイナリパッケージ形式
 .RB ` . '
 に対するエントリを含む。
 .PP
-最後の3番目に要請されるメンバーは
+最後の 3 番目に要請されるメンバーは
 .B data.tar.gz
 というファイル名を持ち、ファイルシステムアーカイブを圧縮 tar 形
 式として含む。
@@ -79,7 +77,7 @@ deb \- Debian バイナリパッケージ形式
 より前に挿入するか、またはメージャーバージョン番号を上げること
 になるであろう。
 .SH 関連項目
-.BR deb (5),
+.BR deb-old (5),
 .BR dpkg-deb (1),
 .BR deb-control (5),
 .IR "Debian Packaging Manual".
