--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 25 17:08:57 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+ * man/ja/Makefile.in: Add new dpkg-source.1 manpage.
+
 Sun Apr 25 16:59:09 BST 2004 Scott James Remnant <scott@netsplit.com>
 
  * configure.in: Add Norwegian Nynorsk and Portugese linguas.
