--- a/man/ja/deb-control.5
+++ b/man/ja/deb-control.5
@@ -1,10 +1,9 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Author: Raul Miller
-.\" original revision: 1.6
+.\" original revision: 1.1.2.1
 .\" Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-.TH DEB-CONTROL 5 "January 2000" "Debian Project" "Debian GNU/Linux"
+.TH DEB-CONTROL 5 "January 2000" "Debian Project" "dpkg utilities"
 .SH NAME
-deb\-control \- Debian GNU/Linux パッケージのマスターコントロールファイルフォーマット
+deb\-control \- Debian パッケージのマスターコントロールファイルフォーマット
 .SH SYNOPSIS
 control
 .SH DESCRIPTION
