--- a/man/ja/deb-old.5
+++ b/man/ja/deb-old.5
@@ -1,7 +1,5 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\" Author: Raul Miller, Ian Jackson
-.\"original revision: 1.5
-.TH DEB-OLD 5 "January 2000" "Debian Project" "dpkg"
+.\"original revision: 1.1
+.TH DEB-OLD 5 "January 2000" "Debian Project" "Debian"
 .SH 名称
 deb-old - Debian バイナリパッケージ旧形式フォーマット
 .SH 書式
@@ -15,20 +13,20 @@ deb-old - Debian バイナリパッケージ旧形式フォーマット
 .BR deb (5)
 を参照されたい。
 .SH フォーマット
-2行のフォーマット情報をASCIIテキストファイルがあり、それに2つの
+2 行のフォーマット情報を ASCII テキストファイルがあり、それに 2 つの
 圧縮 tar ファイルが続く。
 .PP
-1行目は8桁にそろえたフォーマットバージョン番号であり、
+1 行目は 8 桁にそろえたフォーマットバージョン番号であり、
 旧形式アーカイブはすべて
 .B 0.939000
 である。
 .PP
-2行目はひとつ目の圧縮 tar ファイルの大きさを与える(0から始まらない)
+2 行目はひとつ目の圧縮 tar ファイルの大きさを与える(0 から始まらない)
 十進数である。
 .PP
 それぞれの行の終わりは改行文字ひとつである。
 .PP
-1番目の tar ファイルは、制御情報を平文ファイル群として含む。詳細は
+1 番目の tar ファイルは、制御情報を平文ファイル群として含む。詳細は
 .IR "Debian Packaging Manual, section 2.2".
 に記述されている。
 .B control
@@ -46,7 +44,7 @@ control tar ファイルは、
 .RB ` . ',
 つまりカレントディレクトリにファイルを含むこともある。
 .PP
-2番目の圧縮 tar ファイルはファイルシステムアーカイブであり、
+2 番目の圧縮 tar ファイルはファイルシステムアーカイブであり、
 インストールされるシステムのルートディレクトリからの相対パス名を
 含んでいる。パス名の先頭にスラッシュ(/)はない。
 
