--- a/man/ja/dpkg-checkbuilddeps.1
+++ b/man/ja/dpkg-checkbuilddeps.1
@@ -1,3 +1,4 @@
+.\" Original manpage cvs revision: 1.3
 .TH DPKG-CHECKBUILDDEPS 1 "February 2001" "Debian project" "dpkg utililties"
 .SH 名前
 dpkg-checkbuilddeps -- ビルド依存と衝突のチェック
@@ -7,7 +8,8 @@ dpkg-checkbuilddeps -- ビルド依存と衝突のチェック
 このプログラムはコントロールファイル中にリストされているビルド依存と
 ビルド衝突に関して、システムにインストールされているパッケージを
 チェックする。
-もし、足りないもの/衝突している物があると、それらを表示して 0 以外の
+チェックされるパッケージには、build-essential も含まれる。
+もし、足りないものや衝突している物があるなら、それらを表示して 0 以外の
 返り値を返して終了する。
 .P
 ディフォルトでは、\fBdebian/control\fR が読まれるが、別のコントロール
