--- a/man/ja/dpkg-divert.8
+++ b/man/ja/dpkg-divert.8
@@ -1,4 +1,4 @@
-.\" original cvs revision: 1.3
+.\" original cvs revision: 1.4
 .TH DPKG-DIVERT 8 "December 1999" "Debian Project" "dpkg utilities"
 .SH 名前
 dpkg-divert -- パッケージのファイルのオーバーライド
@@ -21,28 +21,28 @@ dpkg-divert -- パッケージのファイルのオーバーライド
 .I <file>
 .br
 .SH 説明
-`diversions'というファイルにより、dpkgはファイルをインストールする時に
+`diversions' というファイルにより、dpkg はファイルをインストールする時に
 本来意図していた場所ではなく退避した(`diverted')場所にインストールする
-ようになる。diversionsはDebianパッケージスクリプトで衝突がおこりうる
+ようになる。diversions は Debian パッケージスクリプトで衝突がおこりうる
 ファイルを移動させるために使うことができる。システム管理者は
-パッケージの設定ファイルや他のファイルを(`conffiles'としてマーク
-されていなければ)dpkgが新しいバージョンのパッケージをインストールする
-時にそれらのファイルを上書きしてしまわないようにするためにdiversionを
+パッケージの設定ファイルや他のファイルを(`conffiles' としてマーク
+されていなければ) dpkg が新しいバージョンのパッケージをインストールする
+時にそれらのファイルを上書きしてしまわないようにするために diversion を
 使うことができる。
 .sp
 .B dpkg-divert
-はdiversionsのリストを設定、更新するためのユーティリティである。これは
-3つの基本モードの機能をもっている。diversionの追加、削除、リストである。
-それぞれ --add、--remove、--listオプションで指定する。さらに
+は diversions のリストを設定、更新するためのユーティリティである。これは
+3 つの基本モードの機能をもっている。diversion の追加、削除、リストである。
+それぞれ --add、--remove、--list オプションで指定する。さらに
 退避されたファイルの実際の名前を表示することもできる。以下にあげられている
 他オプションも指定することができる。
 .SH オプション
 .TP
-.I --admindir <ディレクトリ>
-dpkgデータディレクトリを<ディレクトリ>に設定する。(デフォルト: /var/lib/dpkg)
+.I --admindir <directory>
+dpkg データディレクトリを <directory> に設定する。(デフォルト: /var/lib/dpkg)
 .TP
-.I --divert <退避先>
-<退避先>は他のパッケージで使われる名前である。
+.I --divert <divert-to>
+<divert-to> は他のパッケージで使われる名前である。
 .TP
 .I --help
 バージョンと簡単な利用法を表示して正常終了する。
@@ -50,14 +50,14 @@ dpkgデータディレクトリを<ディレクトリ>に設定する。(デフォルト: /var/lib/dpkg)
 .I --local
 全てのパッケージを退避する対象にする。
 .TP
-.I --package <パッケージ>
-<パッケージ>は<ファイル>が退避されることのないパッケージの名前である。
+.I --package <package>
+<package> は <file> が退避されることのないパッケージの名前である。
 .TP
 .I --quiet
 静かなモード。つまり無駄な出力をしない。
 .TP
 .I --rename
-実際にファイルを移動する(もしくは戻す)。dpkg-divertは移動先のファイルが
+実際にファイルを移動する(もしくは戻す)。dpkg-divert は移動先のファイルが
 既に存在していると動作を中断する。
 .TP
 .I --test
@@ -66,24 +66,24 @@ dpkgデータディレクトリを<ディレクトリ>に設定する。(デフォルト: /var/lib/dpkg)
 .I --version
 プログラム名とバージョンを表示して正常終了する。
 .SH 注意
-追加する時は、デフォルトは --localと --divert <オリジナル>.distrib である。
-削除する問は、--packageもしくは--local と --divert は指定されていれば
+追加する時は、デフォルトは --local と --divert <original>.distrib である。
+削除する問は、--package もしくは --local と --divert は指定されていれば
 追加した時と一致していなければいけない。
 .br
-dpkg-divertではディレクトリは退避できない。
+dpkg-divert ではディレクトリは退避できない。
 .SH ファイル
 .TP
 .I /var/lib/dpkg/diversions
-システムの現在の退避リストを含むファイル。これはdpkgで使われる重要なファイル
-`status'や`available'があるdpkgの管理ディレクトリにある。
+システムの現在の退避リストを含むファイル。これは dpkg で使われる重要なファイル
+`status' や `available' がある dpkg の管理ディレクトリにある。
 .br
-注意: dpkg-divertはこのファイルを更新する時に、古いバージョンを
-"-old"という名前をつけたファイルにコピーしておく。
+注意: dpkg-divert はこのファイルを更新する時に、古いバージョンを
+"-old" という名前をつけたファイルにコピーしておく。
 .SH 関連項目
 .BR dpkg (8).
 .sp
-詳しい情報は Debianパッケージングマニュアルの11章 "Diversions - 
-overriding a package's version of a file"を参照のこと。
+詳しい情報は Debian ポリシーマニュアルの Appendix G "Diversions -
+overriding a package's version of a file" を参照のこと。
 .SH 著者
 Copyright (C) 1995 Ian Jackson.
 .sp
