--- a/man/ja/install-info.8
+++ b/man/ja/install-info.8
@@ -1,4 +1,3 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Install-info and this manpage are Copyright 1994 by Ian Jackson.
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
@@ -9,7 +8,8 @@
 .\" Translated Tue Jul  7 11:31:24 JST 1998
 .\"         by Koichi Sekido <sekido@mbox.kyoto-inet.or.jp>
 .\" Updated Wed Apr 25 2001 by NAKANO Takeo <nakano@apm.seikei.ac.jp>
-.\" original cvs revision: 1.3
+.\" LastUpdated Mar 15 2004 by KISE Hiroshi <kise@fuyuneko.jp>
+.\" original cvs revision: 1.5
 .\"
 .\" WORD:       basename                ベースネーム
 .\"
@@ -300,7 +300,8 @@ Miscellaneous というセクションとの両方を作る。
 .B /usr/info
 である。
 .TP
-.BI \-\-align= nnn
+.\"O .BI \-\-align= nnn " [deprecated]"
+.BI \-\-align= nnn " [非推奨]"
 .\"O Specifies that the first line of the description should be indented at
 .\"O least
 .\"O .I nnn
@@ -315,7 +316,8 @@ Miscellaneous というセクションとの両方を作る。
 のメニューエントリの詳細の長さのため、
 より多くのオフセットが必要かもしれない。デフォルトは 27 である。
 .TP
-.BI \-\-calign= nnn
+.\"O .BI \-\-calign= nnn " [deprecated]"
+.BI \-\-calign= nnn " [非推奨]"
 .\"O Specifies that the second and subsequent lines of the description
 .\"O should be indented at least
 .\"O .I nnn
@@ -324,7 +326,8 @@ Miscellaneous というセクションとの両方を作る。
 .I nnn
 だけ字下げすべきものと指定する。デフォルトは 29 である。
 .TP
-.BI \-\-maxwidth= nnn
+.\"O .BI \-\-maxwidth= nnn " [deprecated]"
+.BI \-\-maxwidth= nnn " [非推奨]"
 .\"O Specifies that the maximum width for the Info file is
 .\"O .IR nnn .
 .\"O This is used when wordwrapping the descriptive text.
@@ -488,5 +491,4 @@ warranty.
 このマニュアルページは dpkg パッケージに付属の
 .BR install-info (8)
 の日本語訳である。
-翻訳対象は CVS revision が 1.3 のものである。
-
+翻訳対象は dpkg パッケージのバージョン 1.10.20 に付属のものである。
