--- a/man/ja/start-stop-daemon.8
+++ b/man/ja/start-stop-daemon.8
@@ -1,13 +1,13 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\"original revision: 1.11
+.\"original revision: 1.15.2.2
 .\"
 .\" Translated Wed May 13 17:28:56 JST 1998
 .\"	by Hidenobu NABETANI <nabetani@kern.phys.sci.osaka-u.ac.jp>
+.\" Last modified: Tue Nov 11 14:24:54 JST 2003
 .\"
 .\" WORD:	infomational message	参考情報
 .\" WORD:	instance		インスタンス
 .\"
-.TH START\-STOP\-DAEMON 8 "15th March 1997" "Debian Project" "Debian GNU/Linux"
+.TH START\-STOP\-DAEMON 8 "15th March 1997" "Debian Project" "dpkg utilities"
 .SH 名前
 start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .SH 書式
@@ -28,10 +28,10 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .BR -V | --version
 .SH 説明
 .B start\-stop\-daemon
-はシステムレベルのプロセスの生成・停止を制御するために使用される。
+はシステムレベルのプロセスの生成や停止を制御するために使用される。
 また、
-.BR --exec ", " --pidfile ", " --user ", and " --name " options,"
-はオプションを与えることで、実行中のプロセスを見つけることができる。
+.BR --exec ", " --pidfile ", " --user ", " --name
+オプションを指定することで、実行中のプロセスを見つけることができる。
 
 .BR --start
 を使用すると、
@@ -52,7 +52,9 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 以降に与えられた任意の引数は起動されるプログラムにそのまま引き
 渡される。もし
 .B --retry
-が指定された場合、start-stop-daemonはそのプロセスが終了したかどうかを
+が指定された場合、
+.B start-stop-daemon
+はそのプロセスが終了したかどうかを
 確認する。
 
 .BR --stop
@@ -75,14 +77,12 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .TP
 \fB-x\fP|\fB--exec\fP \fIexecutable\fP
 (
-.B /proc/
-.I pid
-.B /exe 
+.B /proc/\fIpid\fB/exe\fP
 により)指定された executable のプロセスを調べる。
 .TP
 \fB-p\fP|\fB--pidfile\fP \fIpid-file\fP
-.I pid-file
-で指定されるプロセスIDを持つプロセスを調べる。
+.IR pid-file
+で指定されるプロセス ID を持つプロセスを調べる。
 .TP
 \fB-u\fP|\fB--user\fP \fIusername\fP|\fIuid\fP
 .I username 
@@ -90,18 +90,19 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .I uid
 で指定されるユーザが所有するプロセスを調べる。
 .TP
+\fB-g\fP|\fB--group\fP \fIgroup\fP|\fIgid\fP
+プロセスを開始する時点で、\fIgroup\fP や \fIgid\fP を変更する。
+.TP
 \fB-n\fP|\fB--name\fP \fIprocess-name\fP
 (
-.B /proc/
-.I pid
-.B /stat 
+.BR /proc/\fIpid\fB/stat\fP
 により)
 .I process-name
 という名のプロセスを調べる。
 .TP
 \fB-s\fP|\fB--signal\fP \fIsignal\fP
 .BR --stop
-が与えられた時、プロセスを停止するために送るシグナルを指定する
+が同時に与えられた時、プロセスを停止するために送るシグナルを指定する
 (デフォルトは 15)。
 .TP
 \fB-R\fP|\fB--retry\fP \fItimeout\fP|\fIschedule\fP
@@ -197,6 +198,13 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 に chdir と chroot を実行する。pidfile は chroot 後に、書き出されること
 に注意する。
 .TP
+\fB-d\fP|\fB--chdir\fP \fIpath\fP
+プロセスを開始する前に、
+.I path
+に chdir する。
+\fB-r\fP|\fB--chroot\fP オプションを同時に指定した場合は、
+chroot のあとに chdir する。
+.TP
 .BR -b | --background
 典型的には、デーモンプロセスを切り離せないプログラムで使用される。このオプ
 ションを指定した場合、
@@ -210,7 +218,7 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 ラムや、fork を自分で行うためのコードを追加できないプログラムのみでの使用
 を意図している。
 .TP
-.BR -N | --nicelevel
+\fB-N\fP|\fB--nicelevel\fP \fIint\fP
 プロセスを開始する前にプロセスのプライオリティを変更する。
 .TP
 .BR -m | --make-pidfile
