--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
+Sun Apr 25 17:17:16 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * man/es/Makefile.in: Add new dpkg-source.1 manpage.
+
 Sun Apr 25 17:08:57 BST 2004 Scott James Remnant <scott@netsplit.com>
 
- * man/ja/Makefile.in: Add new dpkg-source.1 manpage.
+  * man/ja/Makefile.in: Add new dpkg-source.1 manpage.
 
 Sun Apr 25 16:59:09 BST 2004 Scott James Remnant <scott@netsplit.com>
 
- * configure.in: Add Norwegian Nynorsk and Portugese linguas.
+  * configure.in: Add Norwegian Nynorsk and Portugese linguas.
 
 Sun Mar 28 18:32:19 CEST 2004 Jordi Mallach <jordi@debian.org>
 
