Slightly over-keen patch to install-info, $infodir is prepared earlier and --dir-file actually has the same effect as another option.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Sun Apr 25 18:02:34 BST 2004 Scott James Remnant <scott@netsplit.com>
 
-  * scripts/install-info.pl: Add gndn --dir-file option for compatibility
+  * scripts/install-info.pl: Add --dir-file option for compatibility
   with GNU install-info.  Correct code to break infinite loop.
 
 Sun Apr 25 17:57:46 BST 2004 Scott James Remnant <scott@netsplit.com>
