--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,7 @@ dpkg (1.10.21) unstable; urgency=low
     Closes: #161156.
   * Correctly break out of the loop in install-info.
     Closes: #124225, #160761.
-  * Add ignored --dir-file option to install-info for GNU install-info
+  * Add --dir-file option to install-info for GNU install-info
     compatibility.  Closes: #179192
   * Refer to debian-policy in dpkg-doc's description instead of the
     non-existant packaging-manual.  Closes: #120970.
