Update translation files, date the release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -49,7 +49,7 @@ dpkg (1.10.21) unstable; urgency=low
     - Portguese (Miguel Figueiredo).  Closes: #240081.
     - Spanish dpkg-source manpage (Ruben Porras).  Closes: #171489.
 
- -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+ -- Scott James Remnant <scott@netsplit.com>  Sun, 25 Apr 2004 18:55:10 +0100
 
 dpkg (1.10.20) unstable; urgency=high
 
