Begin 1.10.22 ... which will get released tomorrow when we find out what 1.10.21 broke.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.22) unstable; urgency=low
+
+  * 
+
+ -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+
 dpkg (1.10.21) unstable; urgency=low
 
   * Fix incorrect linked list node removal code that caused every second
