Add support for pure amd64 in archtable and dpkg-architecture, it's maturing sufficiently that we should probably support it now.  archtable made a bit easier to read too...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 26 20:28:58 CEST 2004 Tollef Fog Heen <tfheen@debian.org>
+
+  * scripts/dpkg-architecture.pl, archtable: Add AMD64/x86_64 support.
+    Also reindent archtable so the columns line up nicely.
+
 Mon Apr 26 18:53:15 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * configure.in: Put the man page directories in alphabetical order.
