--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.10.22) unstable; urgency=low
 
+  * Add amd64 support. Closes: #238483, #241938.
   * Stop hardcoding the list of manual page languages in debian/rules,
     so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
 
